# Galois

./: CMakeLists.txt
libgalois/include/galois/graphs/: LC_CSR_Graph.h
libpangolin/: CMakeLists.txt
lonestar/: CMakeLists.txt
lonestar/experimental/: CMakeLists.txt
lonestar/include/Mining/: type.h
lonestar/patternmining/: AutoMiner.h  CMakeLists.txt  PatternMining.cpp  VertexSet.h  debug.cpp  debug.h  def.h  directed_graphlet.cpp  execution_plan.cpp  graphlet.cpp  multip_red_dg.cpp  multirestplans.cpp  rest_plan.cpp  rest_set.cpp
lonestar/patternmining/test/: CMakeLists.txt  VertexSetTest.cpp
lonestarmine/: CMakeLists.txt
lonestarmine/kcl/: CMakeLists.txt
lonestarmine/motif/: CMakeLists.txt
lonestarmine/sgl/: CMakeLists.txt
